# Causality

./: .gitignore  ACE_STEP_INTEGRATION.md  AI_ASSET_WORKFLOW.md  AI_GENERATION_PLAN.md  ASSET_GENERATION_EXAMPLES.md  CHANGELOG_PHASE9.md  Cargo.toml  FEATURES.md  GAME_ENGINE_ROADMAP.md  HOT_RELOAD_GUIDE.md  MCP_GUIDE.md  MCP_MUSIC_GENERATION.md  MCP_TOOLS.md  MCP_TOOLS_GUIDE.md  README.md  ROADMAP.md  SETUP_COMPLETE.md  STABLE_DIFFUSION_SETUP.md  STABLE_DIFFUSION_STATUS.md  TEXTURE_PROMPT_GUIDE.md  TEXTURE_SYSTEM.md  ai-assets-config.toml  comfyui-api-wrapper.py  mcp-config.json  mock-stable-diffusion-api.py  start-ace-step.sh  start-full-stack.sh  test_sd_integration.sh
assets/materials/: debug_normals.mat  default.mat  emissive_glow.mat  grass.mat  metal_polished.mat  stone_bricks.mat  water.mat
assets/music/: MUSIC_GENERATION_DEMO.md  README.md  sunny_exploration_input_params.json
assets/music/samples/: battle_input_params.json  boss_fight_input_params.json  calm_input_params.json  dungeon_input_params.json  mysterious_input_params.json  victory_input_params.json
assets/scenes/: castle.ron  particles_test.ron  pbr_showcase.ron  terrain_water_test.ron  water_test.ron
assets/sounds/: README.md
crates/engine-ai-assets/: Cargo.toml
crates/engine-ai-assets/src/: cache.rs  generator.rs  lib.rs  models.rs  prompt.rs
crates/engine-ai-assets/src/api/: huggingface.rs  local.rs  mod.rs
crates/engine-ai-music/: Cargo.toml  README.md
crates/engine-ai-music/examples/: generate_music.rs
crates/engine-ai-music/src/: client.rs  lib.rs  types.rs
crates/engine-assets/: Cargo.toml
crates/engine-assets/src/: hot_reload.rs  hot_reload_manager.rs  lib.rs  manager.rs  material.rs  mesh.rs  terrain.rs  texture.rs  vegetation.rs  water_fill.rs
crates/engine-assets/src/loaders/: gltf_loader.rs  material_loader.rs  mod.rs
crates/engine-audio/: Cargo.toml
crates/engine-audio/src/: lib.rs  listener.rs  source.rs  system.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: app.rs  builder.rs  input.rs  lib.rs  time.rs
crates/engine-editor/: Cargo.toml
crates/engine-editor/src/: file_ipc.rs  ipc.rs  main.rs  main_complex.rs  undo.rs
crates/engine-editor/src/ui/: console.rs  hierarchy.rs  inspector.rs  mod.rs  viewport.rs
crates/engine-input/: Cargo.toml
crates/engine-input/src/: actions.rs  gamepad.rs  keyboard.rs  lib.rs  manager.rs  mouse.rs
crates/engine-mcp-server/: Cargo.toml
crates/engine-mcp-server/src/: main.rs  protocol.rs  tools.rs
crates/engine-particles/: Cargo.toml
crates/engine-particles/src/: compute.rs  emitter.rs  lib.rs  particle.rs  system.rs
crates/engine-physics/: Cargo.toml
crates/engine-physics/src/: buoyancy.rs  character.rs  components.rs  joints.rs  layers.rs  lib.rs  ragdoll.rs  raycast.rs  sync.rs  world.rs
crates/engine-render/: Cargo.toml
crates/engine-render/src/: camera.rs  culling.rs  foliage_renderer.rs  frustum.rs  gpu_material.rs  gpu_mesh.rs  gpu_texture.rs  lib.rs  lod.rs  material_manager.rs  mesh_manager.rs  particle_renderer.rs  postprocess.rs  renderer.rs  shadow.rs  skybox.rs  texture_manager.rs  water.rs
crates/engine-render/src/shaders/: basic.wgsl  bloom.wgsl  composite.wgsl  foliage.wgsl  particle_render.wgsl  particle_update.wgsl  pbr.wgsl  pbr_advanced.wgsl  pbr_advanced_nm.wgsl  shadow.wgsl  skybox.wgsl  tonemap.wgsl  water.wgsl
crates/engine-scene/: Cargo.toml
crates/engine-scene/src/: components.rs  entity.rs  lib.rs  scene.rs  scene_data.rs  transform.rs
crates/engine-scripting/: Cargo.toml
crates/engine-scripting/src/: api.rs  audio.rs  components.rs  input.rs  lib.rs  runtime.rs  system.rs
crates/engine-ui/: Cargo.toml
crates/engine-ui/src/: canvas.rs  layout.rs  lib.rs  style.rs  widgets.rs
docs/: AUDIO_SYSTEM.md  MATERIALS.md  PHASE10_ROADMAP.md  PHASE11_PARTICLE_SYSTEM_PLAN.md  PHASE9_IMPLEMENTATION.md  QUICK_REFERENCE.md
examples/: fps_controller.rhai
scripts/: audio_demo.rhai  rotate.rhai
