[workspace]
members = [
    "crates/engine-core",
    "crates/engine-render",
    "crates/engine-physics",
    "crates/engine-scripting",
    "crates/engine-assets",
    "crates/engine-audio",
    "crates/engine-particles",
    "crates/engine-scene",
    "crates/engine-ui",
    "crates/engine-editor",
    "crates/engine-mcp-server",
    "crates/engine-ai-assets",
]
resolver = "2"

[workspace.dependencies]
# Math
glam = { version = "0.29", features = ["serde"] }

# Rendering
wgpu = "27.0"
pollster = "0.4"  # For blocking on async operations

# Physics
rapier3d = { version = "0.22", features = ["serde-serialize"] }

# Scripting
rhai = { version = "1.19", features = ["sync", "serde"] }

# Assets
gltf = "1.4"
image = "0.25"
noise = "0.9"

# GUI
egui = "0.33"
egui_code_editor = "0.2"
egui-winit = "0.33"
egui-wgpu = "0.33"

# Windowing
winit = "0.30"

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
notify = "7.0"

# MCP Server
tokio = { version = "1.42", features = ["full"] }
serde_json = "1.0"
crossbeam-channel = "0.5"  # For IPC between editor and MCP server

# AI Asset Generation
reqwest = { version = "0.11", features = ["json", "multipart"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = { version = "0.10" }
async-trait = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2  # Optimize dependencies in debug
