[package]
name = "engine-ai-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
engine-assets = { path = "../engine-assets" }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
uuid = { workspace = true, features = ["v4"] }
sha2 = { workspace = true }
image = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
