[package]
name = "engine-ai-music"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
