[package]
name = "engine-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { workspace = true }
gltf = { workspace = true }
image = { workspace = true }
noise = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
mikktspace = "0.3"

[dev-dependencies]
tempfile = "3.8"
