[package]
name = "engine-editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor"
path = "src/main.rs"

[dependencies]
engine-core = { path = "../engine-core" }
engine-render = { path = "../engine-render" }
engine-physics = { path = "../engine-physics" }
engine-scripting = { path = "../engine-scripting" }
engine-assets = { path = "../engine-assets" }
engine-audio = { path = "../engine-audio" }
engine-scene = { path = "../engine-scene" }
engine-ai-assets = { path = "../engine-ai-assets" }
engine-particles = { path = "../engine-particles" }
glam = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
egui = { workspace = true }
egui_code_editor = { workspace = true }
egui-winit = { workspace = true }
egui-wgpu = { workspace = true }
winit = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }
png = "0.17"
futures = "0.3"
