[package]
name = "engine-input"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
winit = { workspace = true }
gilrs = { workspace = true }
ron = { workspace = true }

[dev-dependencies]
