[package]
name = "engine-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engine-mcp-server"
path = "src/main.rs"

[dependencies]
engine-core = { path = "../engine-core" }
engine-scene = { path = "../engine-scene" }
engine-assets = { path = "../engine-assets" }
glam = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
crossbeam-channel = { workspace = true }
