[package]
name = "engine-scripting"
version = "0.1.0"
edition = "2021"

[dependencies]
engine-core = { path = "../engine-core" }
engine-scene = { path = "../engine-scene" }
engine-input = { path = "../engine-input" }
glam = { workspace = true }
rhai = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
